# webrtc

./: .gitignore  README.md  webrtc_server.sh
android/: build.gradle  gradle.properties  settings.gradle
android/AppRTCMobile/: build.gradle
android/AppRTCMobile/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/res/: build.gradle
android/res/src/main/: AndroidManifest.xml
android/versionPlugin/: .project  build.gradle  config.gradle
android/versionPlugin/src/main/java/com/sdk/versionplugin/: BuildConfig.kt  VersionPlugin.kt
android/webrtc/: CMakeLists.txt  build.gradle
android/webrtc_sdk/: CMakeLists.txt  build.gradle
android/webrtc_sdk/src/main/: AndroidManifest.xml
webrtc/: CMakeLists.txt  Dockerfile  boto.txt  build.gradle  build_android.sh  build_image.sh  depot_tools_update.sh  gclient.txt  gclient_sync.sh  generate_mac_ide.sh  webrtc_build.sh  webrtc_gclient_sync.sh  webrtc_gclient_sync_init.sh
